--- a/parallax.html
+++ b/parallax.html
@@ -77,46 +77,45 @@
         <br>
         <br>As enchanting as she was, the Prince was still in love with the girl who saved him from the storm. He was unaware that it was the little mermaid, and it pained her that she couldn’t tell him the truth.
       </p>
-      <p style="text-indent: 40px; top: 2100px;">
+      <p style="text-indent: 40px; top: 1800px;">
         Moving on from his fantasy of finding his true love, the Prince agreed to an arranged marriage to a Princess of a nearby kingdom, and the heartbroken little mermaid was struck with the fear of dissolving to sea foam. 
         <br>
         <br>Her sisters swam to the surface and offered her a sword, telling her that she could return to the sea as a mermaid if she killed the Prince with it. But she refused this offer.
       </p>
-      <p style="text-indent: 40px; top: 2300px;">
+      <p style="text-indent: 40px; top: 1890px;">
         Instead, the sea witch granted her an eternal soul for her selflessness, and allowed her to remain human until her natural death.
       </p>
       <h1 style="top: 2250px;">The End</h1>
 
       <!-- images for parallax -->
       <img src="img/mermaids/mermaid_01.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="1" data-ps-vertical-position="4500" data-ps-horizontal-position="73%"  style="width: 400px;"/>
-      <img src="img/mermaids/mermaid_02.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.5" data-ps-vertical-position="700" data-ps-horizontal-position="220" />
+      <!-- <img src="img/mermaids/mermaid_02.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.5" data-ps-vertical-position="700" data-ps-horizontal-position="220" /> -->
       <img src="img/mermaids/mermaid_03.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="1" data-ps-vertical-position="7000" data-ps-horizontal-position="73%"  style="width: 400px;"/>
       <img src="img/mermaids/mermaid_04.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.3" data-ps-vertical-position="8200" data-ps-horizontal-position="73%"  style="width: 400px;"/>
-      <img src="img/mermaids/mermaid_05.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="1" data-ps-vertical-position="600" data-ps-horizontal-position="0" />
+      <!-- <img src="img/mermaids/mermaid_05.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="1" data-ps-vertical-position="600" data-ps-horizontal-position="0" /> -->
       <img src="img/mermaids/mermaid_06.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.1" data-ps-vertical-position="8000" data-ps-horizontal-position="40" style="width: 400px;"/>
-      <img src="img/mermaids/mermaid_07.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="2.3" data-ps-vertical-position="400" data-ps-horizontal-position="73%" style="width: 400px;"/>
+      <img src="img/mermaids/mermaid_07.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="2.3" data-ps-vertical-position="600" data-ps-horizontal-position="73%" style="width: 400px;"/>
       <img src="img/waves/wave_01.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.2" data-ps-vertical-position="8300" data-ps-horizontal-position="-150" style="width: 1000px; opacity: 0.5;"/>
-      <img src="img/mermaids/mermaid_08.jpg" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.2" data-ps-vertical-position="900" data-ps-horizontal-position="220" />
-      <img src="img/mermaids/mermaid_09.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.3" data-ps-vertical-position="600" data-ps-horizontal-position="150" />
-      <img src="img/mermaids/mermaid_10.jpeg" class="parallax-move" data-ps-z-index="2" data-ps-speed="0.5" data-ps-vertical-position="6000" data-ps-horizontal-position-right="0" />
-      <img src="img/mermaids/mermaid_11.png" class="parallax-move" data-ps-z-index="2" data-ps-speed=".1" data-ps-vertical-position="6000" data-ps-horizontal-position="40" style="width: 400px;"/>
+      <!-- <img src="img/mermaids/mermaid_08.jpg" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.2" data-ps-vertical-position="900" data-ps-horizontal-position="220" /> -->
+      <img src="img/mermaids/mermaid_09.jpeg" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.8" data-ps-vertical-position="800" data-ps-horizontal-position="40" style="width: 400px;"/>
+      <img src="img/mermaids/mermaid_10.jpeg" class="parallax-move" data-ps-z-index="2" data-ps-speed="0.5" data-ps-vertical-position="6300" data-ps-horizontal-position="73%" style="width: 400px;"/>
+      <img src="img/mermaids/mermaid_11.png" class="parallax-move" data-ps-z-index="2" data-ps-speed="1" data-ps-vertical-position="6000" data-ps-horizontal-position="40" style="width: 400px;"/>
       <img src="img/waves/wave_05.png" class="parallax-move" data-ps-z-index="4" data-ps-speed="0.5" data-ps-vertical-position="4000" data-ps-horizontal-position="-50" style="width: 700px; opacity: 0.5;"/>
       <img src="img/mermaids/mermaid_12.jpg" class="parallax-move" data-ps-z-index="3" data-ps-speed=".1" data-ps-vertical-position="4300" data-ps-horizontal-position="73%" style="width: 400px;" />
-      <img src="img/mermaids/mermaid_13.jpeg" class="parallax-move" data-ps-z-index="4" data-ps-speed="1" data-ps-vertical-position="300" data-ps-horizontal-position="600" />
+      <img src="img/mermaids/mermaid_13.jpeg" class="parallax-move" data-ps-z-index="4" data-ps-speed="1" data-ps-vertical-position="100" data-ps-horizontal-position="39%" />
       <img src="img/mermaids/mermaid_14.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="2.3" data-ps-vertical-position="8400" data-ps-horizontal-position="73%" data-ps-horizontal-position="73%" style="width: 400px;">
-      <img src="img/fish/fish_01.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="400" data-ps-horizontal-position="0">
-      <img src="img/fish/fish_02.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="400" data-ps-horizontal-position="0">
-      <img src="img/fish/fish_04.webp" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="400" data-ps-horizontal-position="0">
+      <img src="img/fish/fish_01.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="3400" data-ps-horizontal-position="0">
+      <img src="img/fish/fish_02.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.8" data-ps-vertical-position="3600" data-ps-horizontal-position="0">
+      <!-- <img src="img/fish/fish_04.webp" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="400" data-ps-horizontal-position="0"> -->
       <img src="img/fish/fish_05.gif" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="7000" data-ps-horizontal-position="-10%" style="width: 700px;">
       <img src="img/waves/wave_04.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.5" data-ps-vertical-position="3300" data-ps-horizontal-position="40" style="width: 900px; opacity: 0.5;"/>
       <!-- <img src="img/princess/princess_01.gif" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="3300" data-ps-horizontal-position="73%" style="width: 400px;"> -->
       <img src="img/princess/princess_02.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.4" data-ps-vertical-position="2400" data-ps-horizontal-position="40" style="width: 400px;">
-      <img src="img/princess/princess_03.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="3300" data-ps-horizontal-position="73%" style="width: 400px;">
-      <img src="img/princess/princess_04.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="3300" data-ps-horizontal-position="73%" style="width: 400px;">
-      <img src="img/princess/princess_05.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="3300" data-ps-horizontal-position="73%" style="width: 400px;">
+      <img src="img/princess/princess_04.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.2" data-ps-vertical-position="1500" data-ps-horizontal-position="40" style="width: 400px;">
+      <img src="img/princess/princess_05.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="1400" data-ps-horizontal-position="73%" style="width: 400px;">
       <img src="img/princess/princess_06.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.8" data-ps-vertical-position="2600" data-ps-horizontal-position="40" style="width: 400px;">
       <img src="img/princess/princess_07.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="5300" data-ps-horizontal-position="73%" style="width: 400px;">
-      <img src="img/princess/princess_08.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="5300" data-ps-horizontal-position="73%" style="width: 400px;">
+      <img src="img/princess/princess_08.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="300" data-ps-horizontal-position="73%" style="width: 400px;">
       <img src="img/princess/princess_09.jpeg" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.9" data-ps-vertical-position="2700" data-ps-horizontal-position="73%" style="width: 400px;">
       
       
